--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,36 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
+    <item android:title="Trips" >
+        <menu >
+            <group >
+                <item android:title="Upcoming"
+                    android:id="@+id/nav_upcoming" />
+                <item android:title="Passed"
+                    android:id="@+id/nav_passed" />
+            </group>
+        </menu>
+    </item>
 
-    <item android:title="Communicate">
-        <menu>
+    <item android:title="Settings" >
+        <menu >
+            <item android:title="Languages"
+                android:id="@+id/nav_languages" />
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+            <item android:title="About"
+                android:id="@+id/nav_about" />
         </menu>
     </item>
+    <item android:title="Logout"
+        android:id="@+id/nav_logout" />
 
 </menu>
