--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -30,10 +30,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
-                    android:text="title"
+                    android:text="@string/title"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:ems="10"
-                    android:id="@+id/edTitle" />
+                    android:id="@+id/info_edTitle" />
             </LinearLayout>
 
             <LinearLayout
@@ -59,7 +59,7 @@
 
 
                     <TextView
-                        android:text="start"
+                        android:text="@string/start"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:layout_width="106dp"
                         android:layout_height="50dp"
@@ -72,7 +72,7 @@
                         android:textColor="#0040ff"
                         android:layout_width="245dp"
                         android:layout_height="wrap_content"
-                        android:id="@+id/autoCompleteStart" />
+                        android:id="@+id/info_start" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -82,7 +82,7 @@
 
 
                     <TextView
-                        android:text="End"
+                        android:text="@string/end"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:layout_width="106dp"
                         android:layout_height="50dp"
@@ -95,7 +95,7 @@
                         android:layout_width="245dp"
                         android:layout_height="wrap_content"
                         android:textColor="#0040ff"
-                        android:id="@+id/autoCompleteEnd" />
+                        android:id="@+id/info_end" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -122,7 +122,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/txDatapicker" />
+                    android:id="@+id/info_date" />
 
 
             </LinearLayout>
@@ -150,7 +150,7 @@
                     android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/txTimepicker" />
+                    android:id="@+id/info_time" />
 
 
             </LinearLayout>
@@ -179,17 +179,6 @@
                         android:orientation="horizontal"
                         >
 
-                        <EditText
-
-                            android:layout_width="match_parent"
-                            android:layout_height="84dp"
-                            android:inputType="textPersonName"
-                            android:text=" "
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:ems="10"
-                            android:id="@+id/txNotes"
-                            android:textColor="#0040ff"
-                            />
                     </LinearLayout>
                 </ScrollView>
             </LinearLayout>
