--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_trip_info"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="iti_edu.battuta.TripInfoActivity">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@android:style/Widget.Holo.ScrollView">
 
@@ -33,7 +33,7 @@
                     android:text="@string/title"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:ems="10"
-                    android:id="@+id/info_edTitle" />
+                    android:id="@+id/info_titleTV" />
             </LinearLayout>
 
             <LinearLayout
@@ -70,9 +70,9 @@
                     <TextView
                         android:text=" "
                         android:textColor="#0040ff"
-                        android:layout_width="245dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/info_start" />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/info_startTV" />
 
                 </LinearLayout>
                 <LinearLayout
@@ -92,10 +92,10 @@
 
                     <TextView
                         android:text=" "
-                        android:layout_width="245dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:textColor="#0040ff"
-                        android:id="@+id/info_end" />
+                        android:id="@+id/info_endTV" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -118,42 +118,15 @@
                     android:text="  "
                     android:textColor="#0040ff"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/info_date" />
+                    android:id="@+id/info_dateTimeTV" />
 
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:orientation="horizontal" >
-
-
-                <TextView
-                    android:text="Time"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_width="106dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:id="@+id/txTime" />
-
-                <TextView
-                    android:text="  "
-                    android:textColor="#0040ff"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_width="150dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:id="@+id/info_time" />
-
-
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -195,6 +168,37 @@
                     android:layout_marginLeft="290dp"/>
 
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:text="Start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/info_startTripBtn"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp" />
+
+                <Button
+                    android:text="Edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/info_editTripBtn"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:text="Delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/info_deleteTripBtn"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp" />
             </LinearLayout>
 
         </LinearLayout>
