--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="20dp">
 
     <TextView
         android:text="@string/about_title"
@@ -30,7 +30,7 @@
         android:layout_marginTop="10dp" />
 
     <TextView
-        android:text="@string/fatma_ali"
+        android:text="Fatma Ali"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fatma"
