--- a/app/src/main/res/layout/activity_edit_trip.xml
+++ b/app/src/main/res/layout/activity_edit_trip.xml
@@ -40,14 +40,14 @@
                             android:ems="10"
                             android:id="@+id/edit_title"
                             android:layout_weight="1"
-                            android:hint="Title"
+                            android:hint="@string/title"
                             android:singleLine="true"
                             android:textSize="24sp" />
 
                     </android.support.design.widget.TextInputLayout>
 
                     <TextView
-                        android:text="Starting Location"
+                        android:text="@string/starting_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/textView3"
@@ -63,7 +63,7 @@
                         android:layout_marginLeft="5dp" />
 
                     <TextView
-                        android:text="Destination"
+                        android:text="@string/destination"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/textView4"
@@ -80,7 +80,7 @@
                         android:layout_marginLeft="5dp" />
 
                     <Switch
-                        android:text="RoundTrip"
+                        android:text="@string/roundTrip"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/switch2"
@@ -101,7 +101,7 @@
                             android:ems="10"
                             android:id="@+id/edit_date_time"
                             android:layout_weight="1"
-                            android:hint="Date and Time"
+                            android:hint="@string/trip_dateTime"
                             android:singleLine="true"
                             android:focusableInTouchMode="false" />
 
@@ -118,7 +118,7 @@
                             android:ems="10"
                             android:id="@+id/edit_notes"
                             android:layout_weight="1"
-                            android:hint="Notes"
+                            android:hint="@string/notes"
                             android:maxLines="3"
                             android:singleLine="false" />
 
