--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -1,72 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="20dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="20dp"
+    android:elevation="5dp">
 
-    <TextView
-        android:text="@string/about_title"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/aboutTitle"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="18sp" />
+        android:layout_gravity="center">
 
-    <TextView
-        android:text="@string/about_contents"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/aboutContents"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_marginTop="10dp" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/it_was_developed_by"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/aboutDeveloped"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_marginTop="10dp" />
+            <TextView
+                android:text="@string/about_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/aboutTitle"
+                android:gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="24sp"
+                android:layout_marginBottom="15dp" />
 
-    <TextView
-        android:text="Fatma Ali"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fatma"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textAlignment="center" />
+            <TextView
+                android:text="@string/about_contents"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/aboutContents"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
 
-    <TextView
-        android:text="Peter Ayad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/peter"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textAlignment="center" />
+            <TextView
+                android:text="@string/it_was_developed_by"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/aboutDeveloped"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:text="Shaimaa Yassin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/shaimaa"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textAlignment="center" />
+            <TextView
+                android:text="Fatma Ali"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fatma"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textAlignment="center" />
 
-    <TextView
-        android:text="Tasnim Marwan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tasnim"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textAlignment="center" />
+            <TextView
+                android:text="Peter Ayad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/peter"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textAlignment="center" />
 
-    <TextView
-        android:text="@string/about_notice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/aboutNotice"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp" />
+            <TextView
+                android:text="Shaimaa Yassin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/shaimaa"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textAlignment="center" />
 
-</LinearLayout>
+            <TextView
+                android:text="Tasnim Marwan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tasnim"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textAlignment="center" />
+
+            <TextView
+                android:text="@string/about_notice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/aboutNotice"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </FrameLayout>
+
+</FrameLayout>
