--- a/app/src/main/res/layout/activity_edit_trip.xml
+++ b/app/src/main/res/layout/activity_edit_trip.xml
@@ -83,7 +83,7 @@
                         android:text="@string/roundTrip"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/switch2"
+                        android:id="@+id/switch_isRound"
                         android:layout_weight="1"
                         android:textAppearance="@style/TextAppearance.AppCompat"
                         android:textSize="18sp"
