--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -31,52 +32,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:orientation="horizontal"
+            <TextView
+                android:text="Destination"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/tvEndPoint"
+                android:layout_weight="1"
+                android:textColor="@android:color/darker_gray" />
 
-                <TextView
-                    android:text="Starting Location"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvStartPoint"
-                    android:layout_weight="1"
-                    android:textColor="@android:color/darker_gray" />
-
-                <TextView
-                    android:text="Date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvDate"
-                    android:layout_weight="1"
-                    android:textColor="@android:color/darker_gray" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
+            <TextView
+                android:text="Date"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="Destination"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvEndPoint"
-                    android:layout_weight="1"
-                    android:textColor="@android:color/darker_gray" />
-
-                <TextView
-                    android:text="Time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvTime"
-                    android:layout_weight="1"
-                    android:textColor="@android:color/darker_gray" />
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/tvDate"
+                android:layout_weight="1"
+                android:textColor="@android:color/darker_gray" />
 
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
